--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,9 @@
 	--navy-blue-modal: rgba(46 47 66 / 0.4);
 	--grey: rgba(46 47 66 / 0.7);
 	--white: rgb(255 255 255);
-	--dairy: rgb(252 252 252);
+	--dairy: rgb(252, 252, 252);
+
+  --transition-duration-and-func: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* === /VARIABLES ==== */
 
@@ -143,7 +145,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--navy-blue);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--transition-duration-and-func);
 }
 
 .menu-link::after {
@@ -157,7 +159,7 @@ img {
   border-radius: 2px;
   background-color: var(--ocean);
   opacity: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity var(--transition-duration-and-func);
 }
 
 .menu-link:hover::after, 
@@ -177,7 +179,7 @@ img {
   font-style: normal;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--transition-duration-and-func);
 }
 
 .menu-link:hover,
@@ -230,7 +232,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: var(--white);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--transition-duration-and-func);
 }
 
 .order-btn:hover,
@@ -329,7 +331,7 @@ img {
   border-radius: 50%;
   background-color: var(--iris);
   fill: var(--cloud);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--transition-duration-and-func);
 }
 
 .social-list-link:hover,
@@ -348,7 +350,7 @@ img {
 .portfolio-list-item {
   width: calc((100% - 2*24px) / 3);
   background-color: var(--white);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow var(--transition-duration-and-func);
 }
 
 .prtfolio-img-wrapper {
@@ -368,7 +370,7 @@ img {
   background-color: var(--iris);
   padding: 40px 32px;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform var(--transition-duration-and-func);
 }
 
 .portfolio-list-item:hover {
@@ -434,7 +436,8 @@ img {
   margin-bottom: 16px;
 }
 
-.footer-social-title {
+.footer-social-title,
+.footer-subscribe-title {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -448,6 +451,292 @@ img {
 .footer-center-content .social-list-link:hover,
 .footer-center-content .social-list-link:focus {
   background-color: var(--green);
+  outline: none;
 }
 
+.footer-right-content {
+  margin-left: auto; 
+}
+
+.subscribe-form {
+  display: flex;
+}
+
+.subscribe-email {
+  border: 1px solid var(--white);
+  border-radius: 4px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  width: 264px;
+  height: 40px;
+  color: var(--white);
+  background-color: transparent;
+  padding: 8px 16px;
+  margin-right: 24px;
+}
+
+.subscribe-email::placeholder {
+  font-size: 12px;
+  line-height: 2.0;
+  letter-spacing: 0.04em;
+  color: var(--white);
+   transition: opacity var(--transition-duration-and-func);
+}
+
+.subscribe-email:focus {
+  outline: none;
+  border-color: var(--green);
+}
+
+.subscribe-email:focus::placeholder {
+  opacity: 0;
+}
+
+.subscribe-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 4px;
+  min-width: 169px;
+  height: 40px;
+  background-color: var(--iris);
+  fill: var(--white);
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--white);
+  transition: background-color var(--transition-duration-and-func);
+}
+
+.subscribe-icon {
+  margin-left: 16px;
+}
+
+.subscribe-btn:hover,
+.subscribe-btn:focus {
+  background-color: var(--green);
+  outline: none;
+} 
+
 /* === /FOOTER STYLES === */
+
+/* === BACKDROP AND MODAL STYLES === */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  background-color: var(--navy-blue-modal);
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity var(--transition-duration-and-func), 
+    visibility var(--transition-duration-and-func);
+}
+
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 4px;
+  width: 408px;
+  min-height: 584px;
+  padding: 72px 24px 24px;
+  background-color: var(--dairy);
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  transition: transform var(--transition-duration-and-func);
+}
+
+.backdrop:not(.is-open) .modal {
+  transform: translate(-50%, -50%) scale(1.5);
+}
+
+.modal-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  padding: 0;
+  line-height: 0;
+  width: 24px;
+  height: 24px;
+  border-radius: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  fill: var(--navy-blue);
+  background-color: var(--cornflower);
+
+  transition: border var(--transition-duration-and-func),
+    fill var(--transition-duration-and-func),
+    background-color var(--transition-duration-and-func);
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  border: 1px solid transparent;
+  fill: var(--white);
+  background-color: var(--ocean);
+}
+
+.modal-slogan {
+  max-width: 360px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  text-transform: capitalize;
+  margin-bottom: 28px;
+}
+/* === /BACKDROP AND MODAL STYLES === */
+
+/* === FORM STYLES === */
+.form-field {
+  margin-bottom: 8px;
+}
+
+.form-label {
+  display: block;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--light-slate);  
+  margin-bottom: 4px;
+}
+
+.input-wrapper {
+  position: relative;
+}
+
+.form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid var(--navy-blue-modal);
+  border-radius: 4px;
+  background-color: transparent;
+  padding-left: 38px;
+  padding-right: 8px;
+  transition: border-color var(--transition-duration-and-func);
+}
+
+.form-icon {
+  position: absolute;
+  top: 50%;
+  left: 18px;
+  transform: translateY(-50%);
+  fill: var(--navy-blue);
+  transition: fill var(--transition-duration-and-func);
+}
+
+.form-input:focus + .form-icon {
+  fill: var(--iris);
+}
+
+.form-field-message {
+  margin-bottom: 16px;
+}
+
+.form-message {
+  width: 100%;
+  height: 120px;
+  border: 1px solid var(--navy-blue-modal);
+  border-radius: 4px;
+  padding: 8px 16px;
+  background-color: transparent;
+  resize: none;
+  transition: border-color var(--transition-duration-and-func);
+}
+
+
+.form-message::placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--navy-blue-modal);
+}
+
+.form-input:focus,
+.form-message:focus {
+  outline: none;
+  border-color: var(--iris);
+}
+
+.form-field-checkbox {
+  margin-bottom: 24px;
+}
+
+.form-checkbox-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--light-slate);
+}
+
+.form-checkbox-label > .privacy-policy-link {
+  line-height: 1.33;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: var(--iris);
+}
+
+.form-custom-checkbox {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid var(--navy-blue-modal);
+  fill: transparent;
+  cursor: pointer;
+  margin-right: 8px;
+  transition: fill var(--transition-duration-and-func), 
+    background-color var(--transition-duration-and-func),
+    border var(--transition-duration-and-func);
+}
+
+.form-checkbox:checked
+  + .form-checkbox-label
+  .form-custom-checkbox {
+    background-color: var(--ocean);
+    border: 1px solid var(--ocean);
+    fill: var(--white);  
+}
+
+.form-checkbox:focus
+  + .form-checkbox-label
+  .form-custom-checkbox {
+  border-color: var(--ocean);
+}
+
+.form-submit-btn {
+  display: block;
+  border: none;
+  min-width: 169px;
+  margin: 0 auto;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--white);  
+  border-radius: 4px;
+  padding: 16px 32px;
+  border: none;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: var(--iris); 
+  transition: background-color var(--transition-duration-and-func);
+  
+}
+
+.form-submit-btn:hover,
+.form-submit-btn:focus {
+  background-color: var(--ocean);
+}
+/* === FORM STYLES === */
