--- a/css/styles.css
+++ b/css/styles.css
@@ -460,6 +460,7 @@ img {
 
 .subscribe-form {
   display: flex;
+  gap: 24px;
 }
 
 .subscribe-email {
@@ -469,9 +470,11 @@ img {
   width: 264px;
   height: 40px;
   color: var(--white);
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
   background-color: transparent;
   padding: 8px 16px;
-  margin-right: 24px;
 }
 
 .subscribe-email::placeholder {
@@ -497,7 +500,7 @@ img {
   align-items: center;
   border: none;
   border-radius: 4px;
-  min-width: 169px;
+  min-width: 165px;
   height: 40px;
   background-color: var(--iris);
   fill: var(--white);
@@ -569,32 +572,38 @@ img {
   line-height: 0;
   width: 24px;
   height: 24px;
-  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   fill: var(--navy-blue);
   background-color: var(--cornflower);
 
-  transition: border var(--transition-duration-and-func),
-    fill var(--transition-duration-and-func),
-    background-color var(--transition-duration-and-func);
+  transition: background-color var(--transition-duration-and-func), border var(--transition-duration-and-func);
 }
 
 .modal-close-btn:hover,
 .modal-close-btn:focus {
-  border: 1px solid transparent;
+  border: none;
   fill: var(--white);
   background-color: var(--ocean);
 }
 
+.modal-close-btn-icon {
+  transition: fill var(--transition-duration-and-func);
+}
+
 .modal-slogan {
   max-width: 360px;
+  color: var(--navy-blue);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
-  margin-bottom: 28px;
+  margin-bottom: 16px;
 }
 /* === /BACKDROP AND MODAL STYLES === */
 
@@ -621,6 +630,7 @@ img {
   height: 40px;
   border: 1px solid var(--navy-blue-modal);
   border-radius: 4px;
+  outline: transparent;
   background-color: transparent;
   padding-left: 38px;
   padding-right: 8px;
@@ -630,7 +640,7 @@ img {
 .form-icon {
   position: absolute;
   top: 50%;
-  left: 18px;
+  left: 16px;
   transform: translateY(-50%);
   fill: var(--navy-blue);
   transition: fill var(--transition-duration-and-func);
@@ -652,6 +662,11 @@ img {
   padding: 8px 16px;
   background-color: transparent;
   resize: none;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--navy-blue-modal);
+  outline: transparent;
   transition: border-color var(--transition-duration-and-func);
 }
 
@@ -707,8 +722,8 @@ img {
   + .form-checkbox-label
   .form-custom-checkbox {
     background-color: var(--ocean);
-    border: 1px solid var(--ocean);
-    fill: var(--white);  
+    border: none;
+    fill: var(--cloud);
 }
 
 .form-checkbox:focus
